--- a/popup.html
+++ b/popup.html
@@ -12,12 +12,13 @@
 <body>
     <div class="modal-header">
         <h1 class="logo">
-            <img src="images/icon_150.png" alt="Logo Image" class="logo-icon"> Password Generator
+            <span class="title">Password Generator</span>
+            <img src="images/icon_new_150.png" alt="Logo Image" class="logo-icon">
         </h1>
-        <p>Generate Your Password!</p>
     </div>
     <div class="modal-content">
-        <input type="text">
+        <p class="content">Type your key: </p>
+        <input type="text" >
     </div>
     <div class="modal-footer">
         <div class="flex-container">
